# trossen-arm-data-collection

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cartesian_control.py  dataset_schema.md  init_arm.py  main.py  move_arm.py  pyproject.toml  test_camera.py  view_camera.py
.claude/: calibration_strategy.md  gelsight_calibration_discussion.md  hand_eye_calibration.md  hand_eye_calibration_explanation.md  instructions.md  realsense_calibration_guide.md  system_setup.md
.github/workflows/: test.yml
_data/_Xverification/: verification_data.json
_data/calibration/: X_from_urdf.json
data/aruco_markers/: marker_config.json
dataset/: metadata.json
doc/: .~lock.Exam Report For Gelsight Data Collection-2.docx#  Exam Report For Gelsight Data Collection-2.docx
scripts/: analyze_gripper_gap.py
src/: __init__.py  analyze_calibration.py  analyze_checkerboard_poses.py  automated_hand_eye_calibration.py  calibration.py  check_data_quality.py  check_frame_conventions.py  collect_data.py  collect_gelsight_calibration.py  collect_verification_data.py  compute_X_from_urdf.py  compute_gelsight_calibration.py  compute_hand_eye.py  gripper_control.py  hand_eye_calibration.py  inspect_data.py  inspect_hand_eye_data.py  measure_camera_point.py  move_robot_manual.py  test_joint_limits.py  validate_hand_eye_math.py  verify_T_gripper2base.py  verify_X.py  verify_calibration.py  verify_calibration_multipose.py
tests/: conftest.py  test_calibration_types.py  test_gelsight.py  test_realsense.py  test_transforms.py  test_video.py  test_writer.py
(+147 files in other folders)
