[project]
name = "trossen-arm-data-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyrealsense2>=2.56.5.9235",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "trossen-arm>=1.9.0",
]
